[gd_scene load_steps=8 format=3 uid="uid://bljks5s3p8tey"]

[ext_resource type="PackedScene" uid="uid://dk2p23b6cvj8e" path="res://ui/player_ui/ui.tscn" id="1_rn86o"]
[ext_resource type="Script" path="res://scenes/main/Main.gd" id="1_uhhgu"]
[ext_resource type="PackedScene" uid="uid://bu0mw60kso2sl" path="res://entities/player/Player.tscn" id="2_1fv7w"]
[ext_resource type="AudioStream" uid="uid://dmfn4awv8ekop" path="res://sounds/Pickup/bloxy-cola.mp3" id="4_jhv5c"]
[ext_resource type="PackedScene" uid="uid://ptr2nelowubu" path="res://menus/story_letter/story_letter.tscn" id="5_i815l"]

[sub_resource type="Animation" id="Animation_2drg8"]
resource_name = "Transition_Fade_In"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fyh7d"]
_data = {
"Transition_Fade_In": SubResource("Animation_2drg8")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_uhhgu")

[node name="CurrentScene" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("2_1fv7w")]
unique_name_in_owner = true
scale = Vector2(0.6, 0.6)

[node name="FollowCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
enabled = false
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648

[node name="UI" parent="." instance=ExtResource("1_rn86o")]
unique_name_in_owner = true

[node name="CurrentMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneTransition" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneTransition"]
libraries = {
"": SubResource("AnimationLibrary_fyh7d")
}

[node name="ColorRect" type="ColorRect" parent="SceneTransition"]
modulate = Color(1, 1, 1, 0)
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioPlayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Drinking" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource("4_jhv5c")
pitch_scale = 1.1

[node name="StoryLetter" parent="." instance=ExtResource("5_i815l")]
unique_name_in_owner = true

[connection signal="s_accepted" from="StoryLetter" to="." method="_on_ok_story_letter"]
